# ChangeLog for net-www/horde-kronolith
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-www/horde-kronolith/Attic/ChangeLog,v 1.3 2003/04/08 23:09:08 alron Exp $

*horde-kronolith-1.0-r1 (08 Apr 2003)
  08 Apr 2003; Dean Bailey <alron@gentoo.org> horde-kronolith-1.0-r1 :
  Fixed problem that cropped up when updating kronolith.

*horde-kronolith-1.0 (03 Feb 2003)
  03 Feb 2003; Dean Bailey <alron@gentoo.org> horde-kronolith-1.0 :
  Initial import. 