@@ -1,6 +1,11 @@
 # ChangeLog for net-www/horde-kronolith
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/horde-kronolith/Attic/ChangeLog,v 1.3 2003/04/08 23:09:08 alron Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/horde-kronolith/Attic/ChangeLog,v 1.4 2003/04/10 19:47:55 alron Exp $
+
+*horde-kronolith-1.1_rc3 (10 Apr 2003)
+  10 Apr 2003; Dean Bailey <alron@gentoo.org> horde-kronolith-1.1_rc3 :
+  Version bump to rc3 to fix issue with brokeness due to updates in primary
+  horde framework.
 
 *horde-kronolith-1.0-r1 (08 Apr 2003)
   08 Apr 2003; Dean Bailey <alron@gentoo.org> horde-kronolith-1.0-r1 :
